--- a/pom.xml
+++ b/pom.xml
@@ -53,6 +53,11 @@
             <artifactId>log4j-core</artifactId>
             <version>2.13.2</version>
         </dependency>
+        <dependency>
+            <groupId>org.neo4j.driver</groupId>
+            <artifactId>neo4j-java-driver</artifactId>
+            <version>4.0.1</version>
+        </dependency>
     </dependencies>
 
     <build>
